# jd-search-and-match

./: gen.py  pyproject.toml  replit.nix  requirements.txt  update_deps.py
project/: config.py  job_analysis.py  linkedin_api.py  scraper.py  utils.py
