[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = [ "Your Name <you@example.com>",]

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [ ".cache",]

[tool.ruff]
select = [ "E", "W", "F", "I", "B", "C4", "ARG", "SIM",]
ignore = [ "W291", "W292", "W293",]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
